Fix syntax highlighting for dark mode.
- Use prefers-color-scheme to detect use of dark mode, and choose a
  color scheme that looks good against a dark background.
- Make code blocks full width.
- Refresh the light background color scheme as well.

--- a/_sass/_extras.scss
+++ b/_sass/_extras.scss
@@ -321,10 +321,19 @@ p, li { line-height: 2rem;
 .sans { font-family: $sans-font;
         letter-spacing: .03em; }
 
-pre, pre code, p code, p pre code { font-family: $code-font;  // removed .code 'class' since code is an actual html tag
-        font-size: 1rem;                   // also added p code, p pre code and pre selector to account for Markdown parsing
-        line-height: 1.71428571;        // of triple backticks plus rationalized line-heights and margins
-        margin-top: 1.71428571rem; }
+
+// removed .code 'class' since code is an actual html tag
+// also added p code, p pre code and pre selector to account for Markdown parsing
+// of triple backticks plus rationalized line-heights and margins
+pre, pre code, p code, p pre code {
+    font-family: $code-font;
+    font-size: 1rem;
+    line-height: 1.71428571;
+    margin-top: 1.71428571rem;
+
+    // override tufte-css and make code blocks full width
+    width: inherit;
+}
 
 
 h1 code, h2 code, h3 code { font-size: 0.80em; } //left in for no real reason
